--- a/Javascript/Arrays/index.html
+++ b/Javascript/Arrays/index.html
@@ -7,7 +7,7 @@
     <title>Arrays</title>
   </head>
   <body>
-    <h2>Arrays</h2>
+    <h2>Arrays display</h2>
     <script src="script.js"></script>
   </body>
 </html>
